force-app/main/default/objects/Route_Quota__c/Route_Quota__c.object-meta.xml
<CustomObject>
    <label>Quotes Budget All</label>
    <nameField>
        <label>Families Names</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotes Budget All</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>