force-app/main/default/objects/Route_Quota__c/fields/Budget_t__c.field-meta.xml
<CustomField>
    <fullName>Budget_t__c</fullName>
    <label>Budget (t)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>