force-app/main/default/objects/Route_Quota__c/fields/ID_ERP__c.field-meta.xml
<CustomField>
    <fullName>ID_ERP__c</fullName>
    <label>ID in ERP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>