force-app/main/default/objects/Route_Quota__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <label>Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QuotePeriod</valueSetName>
    </valueSet>
</CustomField>