force-app/main/default/objects/Route_Quota__c/fields/Quote_pcs__c.field-meta.xml
<CustomField>
    <fullName>Quote_pcs__c</fullName>
    <label>Quote (pcs)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>