force-app/main/default/objects/Route_Quota__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ID_ERP__c</columns>
    <columns>NAME</columns>
    <columns>Route__c</columns>
    <columns>DateBegin__c</columns>
    <columns>DateEnd__c</columns>
    <columns>MarketSegment__c</columns>
    <columns>Quote_t__c</columns>
    <columns>Budget_t__c</columns>
    <columns>Quote_pcs__c</columns>
    <columns>Budget_pcs__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>